# 49974-dynamic_clamp_model

./: CMakeLists.txt  LICENSE  README.md
lib/gtest-1.7.0/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  test_calculation_time.c  test_cluster_configuration.c  test_cluster_evolution.c
src/dynclamp_models/: CMakeLists.txt  model.c  model.h
src/dynclamp_models_test/: CMakeLists.txt  model_test.cpp
src/util/: CMakeLists.txt  input_parser.c  input_parser.h
